# backend

./: .dockerignore  .editorconfig  .env.template  .gitignore  Dockerfile  LICENSE  db.py  main.py  model.py  pyproject.toml  requirements.txt  setup.cfg  storage.py  users.py
.github/workflows/: docker-publish.yml
lpdalle/: __main__.py  config.py  db.py  errors.py  model.py  schemas.py
lpdalle/generation/: gen_storage.py  generation.py  storage.py  view.py
lpdalle/generations/: gen_storage.py  generations.py
lpdalle/public/: generation.py  generations.py  users.py
lpdalle/user/: db.py  db_storage.py  model.py  storage.py  users.py  view.py
