[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Artem Voskresensky <metravs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
sqlalchemy = "^1.4.45"
pydantic = "^1.10.2"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
