[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vosart"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
pydantic = "^1.10.4"
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
